--- a/templates/chat/item-toHit-card.hbs
+++ b/templates/chat/item-toHit-card.hbs
@@ -2,160 +2,174 @@
 <div class="hero chat-card item-card toHit-card" data-actor-id="{{actor._id}}" data-item-id="{{item._id}}" {{#if
     tokenId}}data-token-id="{{tokenId}}" {{/if}}>
 
-    <span class="flavor-text">
-        {{!-- Attack Name --}}
-        <header class="card-header attack flexrow">
-            <img src="{{item.img}}" title="{{item.name}}" width="36" height="36" />
-            <h3 class="item-name">{{{itemName item}}}</h3>
-        </header>
+    {{!-- did this as a handlebars partial to make it easier --}}
+    <div class=" partial-attack-announcement ">
+        {{> (getModulePath 'chat/item-toHit-chat-partial.hbs')}}
+    </div>
 
-        {{!-- Show Target, if any --}}
-        <div class="target-dc-result">
-            {{#each targetData as |target|}}
-            
+    <div class="dice-roll">
+      {{!-- text Always shown --}}
+      <div class="dice-formula card-section">
+        <span class="flavor-text">
+            {{!-- Attack Name --}}
+          <header class="card-header attack flexrow">
+                <img src="{{item.img}}" title="{{item.name}}" width="36" height="36" />
+                <h3 class="item-name">{{{itemName item}}}</h3>
+            </header>
+        </span>
+      </div>
+      {{!-- text hidden --}}
+      <div class="dice-tooltip">
+        <span class="flavor-text">
+            {{!-- Show Target, if any --}}
+          <div class="target-dc-result">
+                {{#each targetData as |target|}}
 
-                {{#if ../maxMinds}}
+
+                  {{#if ../maxMinds}}
                     {{#if (eq @index 0)}}
-                        <div class="target-dc">
-                            {{!-- <span data-visibility="redacted">
-                                    Target: redacted
+                      <div class="target-dc">
+                                {{!-- <span data-visibility="redacted">
+                                        Target: redacted
+                                        <br />
+                                        Result: redacted
+                                </span> --}}
+                        <div data-visibility="gm">
+                                    Target: {{target.name}} ({{target.toHitChar}} {{target.value}})
                                     <br />
-                                    Result: redacted
-                            </span> --}}
-                            <div data-visibility="gm">
+                                    Result: <span class="{{target.result.hit}}">{{target.result.hit}}</span>
+                                </div>
+                            </div>
+                    {{else}}
+                      <div class="target-dc" data-visibility="gm">
                                 Target: {{target.name}} ({{target.toHitChar}} {{target.value}})
                                 <br />
                                 Result: <span class="{{target.result.hit}}">{{target.result.hit}}</span>
                             </div>
-                        </div>
-                    {{else}}
-                        <div class="target-dc" data-visibility="gm">
-                            Target: {{target.name}} ({{target.toHitChar}} {{target.value}})
-                            <br />
-                            Result: <span class="{{target.result.hit}}">{{target.result.hit}}</span>
-                        </div>
                     {{/if}}
-                {{else}}
+                  {{else}}
                     <div class="target-dc">
-                        <span>Target: {{target.name}}</span>
-                        <span data-visibility="gm">
-                            ({{target.toHitChar}} {{target.value}})
-                        </span>
-                        <br />
-                        <span>
-                            Result: <span class="{{target.result.hit}}">{{target.result.hit}}</span>
-                            {{#if target.aoeAlwaysHit}}
-                                due to AOE
-                            {{/if}}
-                            <span data-visibility="gm" class="resultBy">by {{target.result.by}}</span>
-                        </span>
-                    </div>
-                {{/if}}
-            
-            {{/each}}
-            {{#unless targetData}}
-                <div class="target-dc">
-                    <i>{{localize "Items.Attack.TargetingExplanation"}}</i>
-                </div>
-            {{/unless}}
-        </div>
-
-        <div class="tags">
-            {{#each attackTags as |tag id|}}
-                <span class="tag" {{#if tag.title}}title="{{tag.title}}" {{/if}}>{{tag.name}}</span>
-            {{/each}}
-        </div>
-        <hr>
-        <div class="tags">
-            {{#each tags as |tag id|}}
-                <span class="tag tag_transparent" {{#if tag.title}}title="{{tag.title}}"{{/if}}{{#if ../maxMinds}} data-visibility="gm"{{/if}}>{{tag.name}}
-                    {{tag.value}}
-                </span>
-            {{/each}}
-        </div>
-        <hr>
-    </span>
-
-    <div class="hit-roll">
-        {{#if useEnd}}
-        <div class="card-section">
-            <div class="description-tiny">{{{ enduranceText }}}</div>
-        </div>
-        {{/if}}
-
-        {{#each targetData as |target|}}
-            {{#unless target.aoeAlwaysHit}}
-                {{#if (not ../maxMinds)}}
-                    <div class="card-section">
-                        <div class="description-tiny">Attack Roll<br>vs.<br>{{target.name}}</div>
-                        <div class="hit-roll">{{{ target.renderedRoll }}}</div>
-                        <div class="description-medium">
-                            {{{ target.hitRollText }}}
+                            <span>Target: {{target.name}}</span>
                             <span data-visibility="gm">
                                 ({{target.toHitChar}} {{target.value}})
                             </span>
+                            <br />
+                            <span>
+                                Result: <span class="{{target.result.hit}}">{{target.result.hit}}</span>
+                              {{#if target.aoeAlwaysHit}}
+                                due to AOE
+                              {{/if}}
+                              <span data-visibility="gm" class="resultBy">by {{target.result.by}}</span>
+                            </span>
                         </div>
+                  {{/if}}
+
+                {{/each}}
+            {{#unless targetData}}
+              <div class="target-dc">
+                        <i>{{localize "Items.Attack.TargetingExplanation"}}</i>
                     </div>
-                {{else}}
-                    {{!-- Mind Scan - we only want the 1st mind to show the roll info. Only show to GM. --}}
-                    {{#if (eq @index 0)}}
-                        <div class="card-section" data-visibility="gm">
-                            <div class="description-tiny">{{../maxMinds}} mind(s)</div>
-                            <div class="hit-roll">{{{ target.renderedRoll }}}</div>
-                            <div class="description-medium">
-                                {{{ target.hitRollText }}}
-                                <span data-visibility="gm">
+            {{/unless}}
+            </div>
+            <div class="tags">
+              {{#each attackTags as |tag id|}}
+                <span class="tag" {{#if tag.title}}title="{{tag.title}}" {{/if}}>{{tag.name}}</span>
+              {{/each}}
+            </div>
+            <hr>
+            <div class="tags">
+              {{#each tags as |tag id|}}
+                <span class="tag tag_transparent" {{#if tag.title}}title="{{tag.title}}"{{/if}}{{#if ../maxMinds}} data-visibility="gm"{{/if}}>{{tag.name}}
+                  {{tag.value}}
+                    </span>
+              {{/each}}
+            </div>
+            <hr>
+        </span>
+        <div class="hit-roll">
+          {{#if useEnd}}
+            <div class="card-section">
+              <div class="description-tiny">{{{ enduranceText }}}</div>
+            </div>
+          {{/if}}
+
+          {{#each targetData as |target|}}
+            {{#unless target.aoeAlwaysHit}}
+              {{#if (not ../maxMinds)}}
+                <div class="card-section">
+                  <div class="description-tiny">Attack Roll<br>vs.<br>{{target.name}}</div>
+                  <div class="hit-roll">{{{ target.renderedRoll }}}</div>
+                  <div class="description-medium">
+                    {{{ target.hitRollText }}}
+                    <span data-visibility="gm">
                                     ({{target.toHitChar}} {{target.value}})
                                 </span>
-                            </div>
-                        </div>
-                    {{/if}}
+                  </div>
+                </div>
+              {{else}}
+              {{!-- Mind Scan - we only want the 1st mind to show the roll info. Only show to GM. --}}
+                {{#if (eq @index 0)}}
+                  <div class="card-section" data-visibility="gm">
+                    <div class="description-tiny">{{../maxMinds}} mind(s)</div>
+                    <div class="hit-roll">{{{ target.renderedRoll }}}</div>
+                    <div class="description-medium">
+                      {{{ target.hitRollText }}}
+                      <span data-visibility="gm">
+                                        ({{target.toHitChar}} {{target.value}})
+                                    </span>
+                    </div>
+                  </div>
                 {{/if}}
+              {{/if}}
             {{/unless}}
-        {{/each}}
-
-        {{#if maxMinds}}
-            <div>
-                <i>The Game Master is reviewing the target to confirm it is within the Mind Scan area and that your attack score exceeded the target's DMCV.</i>
-            </div>
-
-            <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-                data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
-                data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}" 
-                data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="" title="Will result in a MISS">
-                No Target or Miss
-            </button>
-
-            <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-                data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
-                data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}" 
-                data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="Selected" title="Select a token on the scene">
-                Selected Token
-            </button>
-
-            {{#each targetData as |target|}}
-                {{#if (eq target.result.hit "Hit")}}
-                    <button data-visibility="gm" class="roll-mindscan" data-itemId="{{../item.uuid}}" data-aim="{{../aim}}" data-aim-side="{{../aimSide}}"
-                        data-damageMod="{{../damageMod}}" data-hitRollData="{{../hitRollData}}"
-                        data-effectiveStr="{{../effectiveStr}}" data-effective-Levels="{{../effectiveLevels}}" data-targetIds="{{../targetIds}}" data-velocity="{{../velocity}}" 
-                        data-boostable-Charges="{{../boostableCharges}}" data-to-hit-roll-total="{{../toHitRollTotal}}" data-target="{{this.id}}">
-                        <b>{{this.name}}</b>
-                    </button>
-                {{/if}}
-            {{/each}}
-        {{else}}
-            <div data-visibility="{{actor.id}}">
-                <button class="roll-damage" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-                    data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}" data-actionData="{{actionData}}"
-                    data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}" 
-                    data-boostable-Charges="{{boostableCharges}}">
-                    {{#if (or adjustment senseAffecting)}}
-                        Roll {{item.system.XMLID}}
-                    {{else}}
-                        Roll Damage
-                    {{/if}}
-                </button>
-            </div>
-        {{/if}}
+          {{/each}}
+      </div>      
     </div>
+
+
+    {{#if maxMinds}}
+      <div>
+        <i>The Game Master is reviewing the target to confirm it is within the Mind Scan area and that your attack score exceeded the target's DMCV.</i>
+      </div>
+
+      <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+              data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
+              data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+              data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="" title="Will result in a MISS">
+        No Target or Miss
+      </button>
+
+      <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+              data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
+              data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+              data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="Selected" title="Select a token on the scene">
+        Selected Token
+      </button>
+
+      {{#each targetData as |target|}}
+        {{#if (eq target.result.hit "Hit")}}
+          <button data-visibility="gm" class="roll-mindscan" data-itemId="{{../item.uuid}}" data-aim="{{../aim}}" data-aim-side="{{../aimSide}}"
+                  data-damageMod="{{../damageMod}}" data-hitRollData="{{../hitRollData}}"
+                  data-effectiveStr="{{../effectiveStr}}" data-effective-Levels="{{../effectiveLevels}}" data-targetIds="{{../targetIds}}" data-velocity="{{../velocity}}"
+                  data-boostable-Charges="{{../boostableCharges}}" data-to-hit-roll-total="{{../toHitRollTotal}}" data-target="{{this.id}}">
+            <b>{{this.name}}</b>
+          </button>
+        {{/if}}
+      {{/each}}
+    {{else}}
+      <div data-visibility="{{actor.id}}">
+        <button class="roll-damage" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+                data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}" data-actionData="{{actionData}}"
+                data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+                data-boostable-Charges="{{boostableCharges}}">
+          {{#if (or adjustment senseAffecting)}}
+            Roll {{item.system.XMLID}}
+          {{else}}
+            Roll Damage
+          {{/if}}
+        </button>
+      </div>
+    {{/if}}
+  </div>
+
 </div>
