--- a/templates/chat/item-toHit-card.hbs
+++ b/templates/chat/item-toHit-card.hbs
@@ -1,15 +1,15 @@
 {{ log 'HEROSYS item-toHit-card' this }}
 <div class="hero chat-card item-card toHit-card" data-actor-id="{{actor._id}}" data-item-id="{{item._id}}" {{#if
-    tokenId}}data-token-id="{{tokenId}}" {{/if}}>
+  tokenId}}data-token-id="{{tokenId}}" {{/if}}>
 
-    {{!-- did this as a handlebars partial to make it easier --}}
-    <div class=" partial-attack-announcement ">
-        {{> (getModulePath 'chat/item-toHit-chat-partial.hbs')}}
-    </div>
+  {{!-- did this as a handlebars partial to make it easier --}}
+  <div class=" partial-attack-announcement ">
+    {{> (getModulePath 'chat/item-toHit-chat-partial.hbs')}}
+  </div>
 
-    <div class="dice-roll">
-      {{!-- text Always shown --}}
-      <div class="dice-formula card-section">
+  <div class="dice-roll">
+    {{!-- text Always shown --}}
+    <div class="dice-formula card-section">
         <span class="flavor-text">
             {{!-- Attack Name --}}
           <header class="card-header attack flexrow">
@@ -17,9 +17,9 @@
                 <h3 class="item-name">{{{itemName item}}}</h3>
             </header>
         </span>
-      </div>
-      {{!-- text hidden --}}
-      <div class="dice-tooltip">
+    </div>
+    {{!-- text hidden --}}
+    <div class="dice-tooltip">
         <span class="flavor-text">
             {{!-- Show Target, if any --}}
           <div class="target-dc-result">
@@ -86,90 +86,89 @@
             </div>
             <hr>
         </span>
-        <div class="hit-roll">
-          {{#if useEnd}}
-            <div class="card-section">
-              <div class="description-tiny">{{{ enduranceText }}}</div>
-            </div>
-          {{/if}}
+      <div class="hit-roll">
+        {{#if useEnd}}
+          <div class="card-section">
+            <div class="description-tiny">{{{ enduranceText }}}</div>
+          </div>
+        {{/if}}
 
-          {{#each targetData as |target|}}
-            {{#unless target.aoeAlwaysHit}}
-              {{#if (not ../maxMinds)}}
-                <div class="card-section">
-                  <div class="description-tiny">Attack Roll<br>vs.<br>{{target.name}}</div>
+        {{#each targetData as |target|}}
+          {{#unless target.aoeAlwaysHit}}
+            {{#if (not ../maxMinds)}}
+              <div class="card-section">
+                <div class="description-tiny">Attack Roll<br>vs.<br>{{target.name}}</div>
+                <div class="hit-roll">{{{ target.renderedRoll }}}</div>
+                <div class="description-medium">
+                  {{{ target.hitRollText }}}
+                  <span data-visibility="gm">
+                                    ({{target.toHitChar}} {{target.value}})
+                                </span>
+                </div>
+              </div>
+            {{else}}
+            {{!-- Mind Scan - we only want the 1st mind to show the roll info. Only show to GM. --}}
+              {{#if (eq @index 0)}}
+                <div class="card-section" data-visibility="gm">
+                  <div class="description-tiny">{{../maxMinds}} mind(s)</div>
                   <div class="hit-roll">{{{ target.renderedRoll }}}</div>
                   <div class="description-medium">
                     {{{ target.hitRollText }}}
                     <span data-visibility="gm">
-                                    ({{target.toHitChar}} {{target.value}})
-                                </span>
-                  </div>
-                </div>
-              {{else}}
-              {{!-- Mind Scan - we only want the 1st mind to show the roll info. Only show to GM. --}}
-                {{#if (eq @index 0)}}
-                  <div class="card-section" data-visibility="gm">
-                    <div class="description-tiny">{{../maxMinds}} mind(s)</div>
-                    <div class="hit-roll">{{{ target.renderedRoll }}}</div>
-                    <div class="description-medium">
-                      {{{ target.hitRollText }}}
-                      <span data-visibility="gm">
                                         ({{target.toHitChar}} {{target.value}})
                                     </span>
-                    </div>
                   </div>
-                {{/if}}
+                </div>
               {{/if}}
-            {{/unless}}
-          {{/each}}
-      </div>      
+            {{/if}}
+          {{/unless}}
+        {{/each}}
+      </div>
+    </div>
+  </div>
+  {{#if maxMinds}}
+    <div>
+      <i>The Game Master is reviewing the target to confirm it is within the Mind Scan area and that your attack score
+        exceeded the target's DMCV.</i>
     </div>
 
+    <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+            data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
+            data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+            data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="" title="Will result in a MISS">
+      No Target or Miss
+    </button>
 
-    {{#if maxMinds}}
-      <div>
-        <i>The Game Master is reviewing the target to confirm it is within the Mind Scan area and that your attack score exceeded the target's DMCV.</i>
-      </div>
+    <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+            data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
+            data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+            data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="Selected" title="Select a token on the scene">
+      Selected Token
+    </button>
 
-      <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-              data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
-              data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
-              data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="" title="Will result in a MISS">
-        No Target or Miss
-      </button>
-
-      <button data-visibility="gm" class="roll-mindscan" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-              data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}"
-              data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
-              data-boostable-Charges="{{boostableCharges}}" data-to-hit-roll-total="{{toHitRollTotal}}" data-target="Selected" title="Select a token on the scene">
-        Selected Token
-      </button>
-
-      {{#each targetData as |target|}}
-        {{#if (eq target.result.hit "Hit")}}
-          <button data-visibility="gm" class="roll-mindscan" data-itemId="{{../item.uuid}}" data-aim="{{../aim}}" data-aim-side="{{../aimSide}}"
-                  data-damageMod="{{../damageMod}}" data-hitRollData="{{../hitRollData}}"
-                  data-effectiveStr="{{../effectiveStr}}" data-effective-Levels="{{../effectiveLevels}}" data-targetIds="{{../targetIds}}" data-velocity="{{../velocity}}"
-                  data-boostable-Charges="{{../boostableCharges}}" data-to-hit-roll-total="{{../toHitRollTotal}}" data-target="{{this.id}}">
-            <b>{{this.name}}</b>
-          </button>
-        {{/if}}
-      {{/each}}
-    {{else}}
-      <div data-visibility="{{actor.id}}">
-        <button class="roll-damage" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
-                data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}" data-actionData="{{actionData}}"
-                data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
-                data-boostable-Charges="{{boostableCharges}}">
-          {{#if (or adjustment senseAffecting)}}
-            Roll {{item.system.XMLID}}
-          {{else}}
-            Roll Damage
-          {{/if}}
+    {{#each targetData as |target|}}
+      {{#if (eq target.result.hit "Hit")}}
+        <button data-visibility="gm" class="roll-mindscan" data-itemId="{{../item.uuid}}" data-aim="{{../aim}}" data-aim-side="{{../aimSide}}"
+                data-damageMod="{{../damageMod}}" data-hitRollData="{{../hitRollData}}"
+                data-effectiveStr="{{../effectiveStr}}" data-effective-Levels="{{../effectiveLevels}}" data-targetIds="{{../targetIds}}" data-velocity="{{../velocity}}"
+                data-boostable-Charges="{{../boostableCharges}}" data-to-hit-roll-total="{{../toHitRollTotal}}" data-target="{{this.id}}">
+          <b>{{this.name}}</b>
         </button>
-      </div>
-    {{/if}}
-  </div>
+      {{/if}}
+    {{/each}}
+  {{else}}
+    <div data-visibility="{{actor.id}}">
+      <button class="roll-damage" data-itemId="{{item.uuid}}" data-aim="{{aim}}" data-aim-side="{{aimSide}}"
+              data-damageMod="{{damageMod}}" data-hitRollData="{{hitRollData}}" data-action-Data="{{actionData}}"
+              data-effectiveStr="{{effectiveStr}}" data-effective-Levels="{{effectiveLevels}}" data-targetIds="{{targetIds}}" data-velocity="{{velocity}}"
+              data-boostable-Charges="{{boostableCharges}}">
+        {{#if (or adjustment senseAffecting)}}
+          Roll {{item.system.XMLID}}
+        {{else}}
+          Roll Damage
+        {{/if}}
+      </button>
+    </div>
+  {{/if}}
 
 </div>
